<resources>
    <string name="app_name">CCS</string>
    <string name="action_settings">Configurações</string>
    <string name="salario_desejado">Salário desejado</string>
    <string name="horas_analise">Horas de análise</string>
    <string name="sair">Sair</string>
    <string name="salvar">Salvar</string>
    <string name="imposto_nota_fiscal">Imposto Nota Fiscal em %</string>
    <string name="imposto_fgts_inss">Alíquota FGTS/INSS em %</string>
    <string name="excluir">Excluir</string>
    <string name="horas_de_desenvolvimento">Horas de desenvolvimento</string>
    <string name="horas_de_testes">Horas de testes</string>
    <string name="calcular">Calcular</string>
    <string name="instrucoes">Salario Mensal : \nR$ 5.000,00(Salário que eu quero ganhar) + 11% (FGTS) + (1/12 13Terceiro) + (1/3 Salario Ferias)
\n=> 5000 + 513,01 + 416,67 + 1666,67 => 7596,35 / 160 (Qtde de horas de um mes) \n=> 47,47 (Valor da hora/trabalho) + 75% = 83,09

Agora faça um calculo mais ou menos de horas que vai gastar e faça as contas.
\n
Analise : 35 horas\n
Desenvolvimento: 50 horas\n
Testes: 35 horas\n
Total de Horas: 120 horas\n
Preço a cobrar: 120 * 83,09 => R$9970,80
</string>
    <string name="instrucao">Instruções</string>
    <string name="aliquota_irpf">Alíquota IRPF</string>
    <string name="listagem">Listagem</string>
    <string name="nome_empresa">Nome Empresa</string>
    <string name="tela_principal">Tela Principal</string>
    <string name="limpar_lista">Limpar Lista</string>
</resources>
