<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activitys.MainActivity"
    tools:showIn="@layout/activity_main">


    <EditText
        android:id="@+id/txtSalarioDesejado"
        android:layout_width="@dimen/larguraInput"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/salario_desejado"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtFgtsInss"
        android:layout_width="@dimen/larguraInput"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/horas_analise"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtDev"
        android:layout_width="@dimen/larguraInput"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/horas_de_desenvolvimento"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/txtTestes"
        android:layout_width="@dimen/larguraInput"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/horas_de_testes"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="@dimen/larguraInput"
        android:layout_height="0dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/botao"
        android:text="@string/calcular"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTestes" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="14dp"
        android:text="@string/salario_desejado"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtSalarioDesejado"
        app:layout_constraintStart_toStartOf="@+id/txtSalarioDesejado"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/horas_analise"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtFgtsInss"
        app:layout_constraintStart_toStartOf="@+id/txtSalarioDesejado"
        app:layout_constraintTop_toBottomOf="@+id/txtSalarioDesejado" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/horas_de_desenvolvimento"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtDev"
        app:layout_constraintStart_toStartOf="@+id/txtDev"
        app:layout_constraintTop_toBottomOf="@+id/txtFgtsInss" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/horas_de_testes"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtTestes"
        app:layout_constraintStart_toStartOf="@+id/txtTestes"
        app:layout_constraintTop_toBottomOf="@+id/txtDev" />

</android.support.constraint.ConstraintLayout>