<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.ConfigActivity">

    <EditText
        android:id="@+id/txtImpostoNfe"
        android:layout_width="@dimen/larguraInput"
        android:layout_height="@dimen/alturaInput"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/imposto_nota_fiscal"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/txtFgtsInss"
        android:layout_width="@dimen/larguraInput"
        android:layout_height="@dimen/alturaInput"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/imposto_fgts_inss"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/txtIrpf"
        android:layout_width="@dimen/larguraInput"
        android:layout_height="@dimen/alturaInput"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/aliquota_irpf"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/imposto_nota_fiscal"
        app:layout_constraintStart_toStartOf="@+id/txtImpostoNfe"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/imposto_fgts_inss"
        app:layout_constraintStart_toStartOf="@+id/txtFgtsInss"
        app:layout_constraintTop_toBottomOf="@+id/txtImpostoNfe" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:text="@string/aliquota_irpf"
        app:layout_constraintStart_toStartOf="@+id/txtIrpf"
        app:layout_constraintTop_toBottomOf="@+id/txtFgtsInss" />


</android.support.constraint.ConstraintLayout>